<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_pink"
    tools:context="com.example.mp3.QrActivity">

    <include layout="@layout/toolbar_title"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:background="@color/transparent"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="370dp"
        android:layout_height="500dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="86dp"
        app:cardCornerRadius="35dp"
        android:elevation="20dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_qr"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="80dp"/>
            <TextView
                android:id="@+id/tv_appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/bright_pink"
                android:fontFamily="@font/pacifico_regular"
                android:textSize="40sp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="40dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/qr_message"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="27sp"
        android:gravity="center"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_1" />

</androidx.constraintlayout.widget.ConstraintLayout>