<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_pink"
    tools:context="com.example.MP3.TransferActivity">
    <include layout="@layout/toolbar_title"/>

        <TextView
            android:id="@+id/tv_add_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/deposit_money"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintBottom_toTopOf="@id/cv_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="25sp"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="370dp"
        android:layout_height="160dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="86dp"
        app:cardCornerRadius="35dp"
        android:elevation="50dp"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp">

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_amount"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_2"
                android:layout_width="330dp"
                android:layout_height="100dp"
                android:elevation="30dp"
                android:backgroundTint="@color/dirty_white"
                app:layout_constraintStart_toStartOf="parent"
                app:cardCornerRadius="35dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="280dp"
                    android:layout_height="80dp"
                    android:hint="0.00"
                    android:inputType="number"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="44sp"
                    android:fontFamily="@font/montserrat_semibold"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bttn_add_Value"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button_white"
        android:text="@string/add_amount"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@id/cv_1"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>